<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_allUser"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/title_all" />

    <group>
    <item
        android:id="@+id/nav_Account"
        android:icon="@drawable/ic_singup_person"
        android:title="@string/Account" />

    <item
        android:id="@+id/nav_changeName"
        android:icon="@drawable/baseline_notification_important_black_18dp"
        android:iconTint="@color/colorPrimary"
        android:title="@string/nav_name" />

        <item
            android:id="@+id/nav_TumBilgiler"
            android:icon="@android:drawable/btn_plus"
            android:iconTint="@color/colorPrimary"
            android:title="@string/nav_hesaplar" />
    <item
        android:id="@+id/nav_Logout"
        android:icon="@drawable/ic_lock"
        android:title="@string/LogOut" />

    </group>

</menu>