<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainProcesses.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayoutIsimDegisimYeri"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:layout_weight="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHesapYeri">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/EditTextYeniIsim"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="New Name : "
                android:enabled="false"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:hint="@string/new_name"
                android:textColorHint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/textViewYeniIsim"
                android:layout_width="380dp"
                android:layout_height="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/colorPrimary"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonIsimDegistir"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:onClick="ChangeName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/changeName"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHesapYeri"
        android:layout_width="388dp"
        android:layout_height="183dp"
        android:layout_marginTop="50dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinnerSettingsTime"
            android:layout_width="380dp"
            android:layout_height="53dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/EditTextHesaplamaSonucu"
                android:layout_width="220dp"
                android:layout_height="62dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="Kazancınız : "
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSettingsTime" />
            <EditText
                android:id="@+id/textViewHesaplamaSonucu"
                android:layout_width="380dp"
                android:layout_height="62dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSettingsTime" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonOyunuSifirla"
        android:layout_width="372dp"
        android:layout_height="67dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/OyunuSifirla"
        android:onClick="YeniOyunBasla"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutIsimDegisimYeri" />

    <ImageView
        android:id="@+id/buttonSettingBackToanActivity"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="356dp"
        android:onClick="BackToAnaActivity"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutHesapYeri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/colorPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>